Soluciones al procesamiento de tareas sin bloquear hilos ni recursos.